feat: implement xp gain/loss

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,9 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.4.0+1.21
-minecraft_version=1.21
+version=4.4.0+1.21.1
+minecraft_version=1.21.1
+additional_minecraft_versions=1.21
 branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
