--- a/fabric-gametest/build.gradle
+++ b/fabric-gametest/build.gradle
@@ -29,6 +29,7 @@ configurations {
 dependencies {
     modImplementation libs.fabric.loader
     modImplementation libs.fabric.api
+    modImplementation libs.architectury.fabric
     modImplementation libs.jamlib.fabric
 
     implementation project(path: ":fabric", configuration: "namedElements")
