--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -37,7 +37,7 @@ if (System.getenv("CURSEFORGE_API_KEY") != null && System.getenv("MODRINTH_API_K
             displayName = "V${project.version} (Fabric ${project.minecraft_version})"
             changelog = rootProject.file("CHANGELOG.md").text
             releaseType = project.version.contains("beta") ? "beta" : "release"
-            gameVersions = project.additional_minecraft_versions.split(",") + project.minecraft_version
+            gameVersions = [project.minecraft_version, *project.additional_minecraft_versions.split(",")]
             gameLoaders = ["fabric", "quilt"]
 
             mainPublication tasks.remapJar
