--- a/neoforge/build.gradle
+++ b/neoforge/build.gradle
@@ -44,7 +44,7 @@ if (System.getenv("CURSEFORGE_API_KEY") != null && System.getenv("MODRINTH_API_K
             displayName = "V${project.version} (NeoForge ${project.minecraft_version})"
             changelog = rootProject.file("CHANGELOG.md").text
             releaseType = project.version.contains("beta") ? "beta" : "release"
-            gameVersions = project.additional_minecraft_versions.split(",") + project.minecraft_version
+            gameVersions = [project.minecraft_version, *project.additional_minecraft_versions.split(",")]
             gameLoaders = ["neoforge"]
 
             mainPublication tasks.remapJar
