--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,10 @@ subprojects {
 
     loom {
         silentMojangMappingsLicense()
+        
+        mixin {
+            useLegacyMixinAp = false
+        }
     }
 
     jar {
