--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.4.1+1.21.1
-minecraft_version=1.21.1
-additional_minecraft_versions=1.21
-minimum_minecraft_version=1.21
-branch=1.21.1
+version=4.4.1+1.21.3
+minecraft_version=1.21.3
+additional_minecraft_versions=1.21.2
+minimum_minecraft_version=1.21.2
+branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
