--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,19 +1,19 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "13.0.8"
+architectury = "14.0.3"
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.1.72"
+neoforge = "21.3.1-beta"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.15.11"
-fabric-api = "0.106.0+1.21.1"
+fabric-loader = "0.16.7"
+fabric-api = "0.106.1+1.21.3"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.2.2+1.21.1"
+jamlib = "1.2.2+1.21.3"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "11.0.3"
+modmenu = "12.0.0-beta.1"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
