--- a/neoforge/src/main/resources/META-INF/neoforge.mods.toml
+++ b/neoforge/src/main/resources/META-INF/neoforge.mods.toml
@@ -39,3 +39,6 @@ type = "required"
 versionRange = "[${jamlib_version},)"
 ordering = "AFTER"
 side = "BOTH"
+
+[[mixins]]
+config = "rightclickharvest.mixins.json"
