--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,16 @@ minecraft_version=1.21.3
 additional_minecraft_versions=1.21.2
 minimum_minecraft_version=1.21.2
 branch=main
+version=4.4.4+1.21.1
+minecraft_version=1.21.1
+
+additional_minecraft_versions=1.21
+minimum_minecraft_version=1.21
+minimum_architectury_api_version=13.0.6
+minimum_fabric_api_version=0.102.0+1.21
+minimum_jamlib_version=1.2.2+1.21.1
+
+branch=1.21.1
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
