fix: change dependency logic

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ additional_minecraft_versions=1.21
 minimum_minecraft_version=1.21
 minimum_architectury_api_version=13.0.6
 minimum_fabric_api_version=0.102.0+1.21
-minimum_jamlib_version=1.2.2+1.21.1
+minimum_jamlib_version=1.2.2-build.2+1.21.1
 
 branch=1.21.1
 group=io.github.jamalam360
