--- a/gradle.properties
+++ b/gradle.properties
@@ -3,19 +3,14 @@ org.gradle.daemon=false
 org.gradle.parallel=true
 version=4.4.3+1.21.3
 minecraft_version=1.21.3
+
 additional_minecraft_versions=1.21.2
 minimum_minecraft_version=1.21.2
-branch=main
-version=4.4.4+1.21.1
-minecraft_version=1.21.1
+minimum_architectury_api_version=14.0.4
+minimum_fabric_api_version=0.104.0+1.21.2
+minimum_jamlib_version=1.2.1-build.2+1.21.3
 
-additional_minecraft_versions=1.21
-minimum_minecraft_version=1.21
-minimum_architectury_api_version=13.0.6
-minimum_fabric_api_version=0.102.0+1.21
-minimum_jamlib_version=1.2.2+1.21.1
-
-branch=1.21.1
+branch=1.21.3
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
