--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ minimum_architectury_api_version=14.0.4
 minimum_fabric_api_version=0.104.0+1.21.2
 minimum_jamlib_version=1.2.1-build.2+1.21.3
 
-branch=1.21.3
+branch=main
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
