--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.4.4+1.21.3
-minecraft_version=1.21.3
+version=4.4.4+1.21.4
+minecraft_version=1.21.4
 
-additional_minecraft_versions=1.21.2
-minimum_minecraft_version=1.21.2
-minimum_architectury_api_version=14.0.4
-minimum_fabric_api_version=0.104.0+1.21.2
-minimum_jamlib_version=1.2.1-build.2+1.21.3
+additional_minecraft_versions=
+minimum_minecraft_version=1.21.4
+minimum_architectury_api_version=15.0.1
+minimum_fabric_api_version=0.111.0+1.21.4
+minimum_jamlib_version=1.2.2+1.21.4
 
 branch=main
 group=io.github.jamalam360
