--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,19 +1,23 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "14.0.3"
+architectury = "15.0.1"
+
+# https://parchmentmc.org/docs/getting-started
+parchment-minecraft = "1.21.4"
+parchment = "2024.12.07"
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.3.1-beta"
+neoforge = "21.4.13-beta"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.16.7"
-fabric-api = "0.106.1+1.21.3"
+fabric-loader = "0.16.9"
+fabric-api = "0.111.0+1.21.4"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.2.2+1.21.3"
+jamlib = "1.2.2+1.21.4"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "12.0.0-beta.1"
+modmenu = "13.0.0-beta.1"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
