--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.5.0+1.21.3
+version=4.5.1+1.21.3
 minecraft_version=1.21.3
 
 additional_minecraft_versions=1.21.2
@@ -10,7 +10,7 @@ minimum_architectury_api_version=14.0.4
 minimum_fabric_api_version=0.104.0+1.21.2
 minimum_jamlib_version=1.2.1-build.2+1.21.3
 
-branch=main
+branch=1.21.3
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
