--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,20 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.5.3+1.21.1
-minecraft_version=1.21.1
+version=4.5.3+1.20.1
+minecraft_version=1.20.1
 
-additional_minecraft_versions=1.21
-minimum_minecraft_version=1.21
-minimum_architectury_api_version=13.0.6
-minimum_fabric_api_version=0.102.0+1.21
-minimum_jamlib_version=1.2.2-build.2+1.21.1
+additional_minecraft_versions=
+minimum_minecraft_version=1.20.1
+minimum_architectury_api_version=9.2.14
+minimum_fabric_api_version=0.92.4+1.20.1
+minimum_jamlib_version=1.3.2+1.20.1
 
-branch=1.21.1
+branch=1.20.1-multiloader
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
-enabled_platforms=fabric,neoforge
+enabled_platforms=fabric,forge
 
 systemProp.javax.xml.parsers.SAXParserFactory=com.sun.org.apache.xerces.internal.jaxp.SAXParserFactoryImpl
 systemProp.javax.xml.transform.TransformerFactory=com.sun.org.apache.xalan.internal.xsltc.trax.TransformerFactoryImpl
