--- a/settings.gradle
+++ b/settings.gradle
@@ -33,5 +33,5 @@ rootProject.name = "rightclickharvest"
 include("common")
 include("datagen")
 include("fabric")
-include("neoforge")
+include("forge")
 include("fabric-gametest")
