--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         run: ./gradlew fabric-gametest:runGametest
 
       - name: Build
-        run: ./gradlew clean neoforge:build fabric:build
+        run: ./gradlew clean forge:build fabric:build
 
       - name: Capture Fabric Build Artifacts
         uses: actions/upload-artifact@v4
@@ -44,8 +44,8 @@ jobs:
           name: Fabric Artifacts
           path: fabric/build/libs/
 
-      - name: Capture NeoForge Build Artifacts
+      - name: Capture Forge Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: NeoForge Artifacts
-          path: neoforge/build/libs/
+          name: Forge Artifacts
+          path: forge/build/libs/
