--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,32 +1,32 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "13.0.8"
+architectury = "9.2.14"
 
-# https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.1.72"
+# https://files.minecraftforge.net
+forge = "1.20.1-47.4.0"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.16.9"
-fabric-api = "0.106.0+1.21.1"
+fabric-loader = "0.16.10"
+fabric-api = "0.92.4+1.20.1"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.2.2+1.21.1"
+jamlib = "1.3.2+1.20.1"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "11.0.3"
+modmenu = "7.2.2"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
 architectury-fabric = { module = "dev.architectury:architectury-fabric", version.ref = "architectury" }
-architectury-neoforge = { module = "dev.architectury:architectury-neoforge", version.ref = "architectury" }
+architectury-forge = { module = "dev.architectury:architectury-forge", version.ref = "architectury" }
 
-neoforge = { module = "net.neoforged:neoforge", version.ref = "neoforge" }
+forge = { module = "net.minecraftforge:forge", version.ref = "forge" }
 
 fabric-loader = { module = "net.fabricmc:fabric-loader", version.ref = "fabric-loader" }
 fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fabric-api" }
 
 jamlib-common = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
 jamlib-fabric = { module = "io.github.jamalam360:jamlib-fabric", version.ref = "jamlib" }
-jamlib-neoforge = { module = "io.github.jamalam360:jamlib-neoforge", version.ref = "jamlib" }
+jamlib-forge = { module = "io.github.jamalam360:jamlib-forge", version.ref = "jamlib" }
 
 modmenu = { module = "maven.modrinth:modmenu", version.ref = "modmenu" }
