--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.5.3+1.21.4-patch.1
-minecraft_version=1.21.4
+version=4.5.3+1.21.5
+minecraft_version=1.21.5
 
 additional_minecraft_versions=
-minimum_minecraft_version=1.21.4
-minimum_architectury_api_version=15.0.1
-minimum_fabric_api_version=0.111.0+1.21.4
-minimum_jamlib_version=1.2.2+1.21.4
+minimum_minecraft_version=1.21.5
+minimum_architectury_api_version=16.1.4
+minimum_fabric_api_version=0.120.0+1.21.5
+minimum_jamlib_version=1.3.5+1.21.5
 
 branch=main
 group=io.github.jamalam360
