--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "15.0.1"
+architectury = "16.1.4"
 
 # https://parchmentmc.org/docs/getting-started
 parchment-minecraft = "1.21.4"
 parchment = "2024.12.07"
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.4.77-beta"
+neoforge = "21.5.9-beta"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.16.9"
-fabric-api = "0.111.0+1.21.4"
+fabric-loader = "0.16.13"
+fabric-api = "0.120.0+1.21.5"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.2.2+1.21.4"
+jamlib = "1.3.5+1.21.5"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "13.0.0-beta.1"
+modmenu = "14.0.0-rc.2"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
