--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "16.1.4"
+architectury = "17.0.6"
 
 # https://parchmentmc.org/docs/getting-started
 parchment-minecraft = "1.21.4"
 parchment = "2024.12.07"
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.5.9-beta"
+neoforge = "21.6.20-beta"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.16.13"
-fabric-api = "0.120.0+1.21.5"
+fabric-loader = "0.16.14"
+fabric-api = "0.128.1+1.21.6"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.3.5+1.21.5"
+jamlib = "1.3.5+1.21.6"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "14.0.0-rc.2"
+modmenu = "15.0.0-beta.3"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
