--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.5.3+1.21.6
-minecraft_version=1.21.6
+version=4.5.3+1.21.7
+minecraft_version=1.21.7
 
-additional_minecraft_versions=
+additional_minecraft_versions=1.21.6
 minimum_minecraft_version=1.21.6
 minimum_architectury_api_version=17.0.6
-minimum_fabric_api_version=0.128.1+1.21.6
-minimum_jamlib_version=1.3.5+1.21.6
+minimum_fabric_api_version=0.128.2+1.21.7
+minimum_jamlib_version=1.3.5+1.21.7
 
 branch=main
 group=io.github.jamalam360
