--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -1,23 +1,23 @@
 [versions]
 # https://modrinth.com/mod/architectury-api/versions
-architectury = "17.0.6"
+architectury = "17.0.8"
 
 # https://parchmentmc.org/docs/getting-started
-parchment-minecraft = "1.21.4"
-parchment = "2024.12.07"
+parchment-minecraft = "1.21.8"
+parchment = "2025.09.14"
 
 # https://projects.neoforged.net/neoforged/neoforge
-neoforge = "21.7.10-beta"
+neoforge = "21.8.47"
 
 # https://fabricmc.net/develop
-fabric-loader = "0.16.14"
-fabric-api = "0.128.2+1.21.7"
+fabric-loader = "0.17.2"
+fabric-api = "0.133.4+1.21.8"
 
 # https://maven.jamalam.tech/#/releases
-jamlib = "1.3.5+1.21.7"
+jamlib = "1.3.5+1.21.8"
 
 # https://modrinth.com/mod/modmenu/versions
-modmenu = "15.0.0-beta.3"
+modmenu = "15.0.0"
 
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
