--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.5.3+1.21.4-patch.1
+version=4.6.0+1.21.4
 minecraft_version=1.21.4
 
 additional_minecraft_versions=
@@ -10,7 +10,7 @@ minimum_architectury_api_version=15.0.1
 minimum_fabric_api_version=0.111.0+1.21.4
 minimum_jamlib_version=1.2.2+1.21.4
 
-branch=main
+branch=1.21.4
 group=io.github.jamalam360
 mod_name=Right Click Harvest
 mod_id=rightclickharvest
