--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.6.0+1.21.9
-minecraft_version=1.21.9
+version=4.6.0+1.21.10
+minecraft_version=1.21.10
 
-additional_minecraft_versions=
+additional_minecraft_versions=1.21.9
 minimum_minecraft_version=1.21.9
 minimum_architectury_api_version=18.0.3
 minimum_fabric_api_version=0.134.0+1.21.9
