--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ minimum_minecraft_version=1.21.9
 minimum_architectury_api_version=18.0.3
 minimum_fabric_api_version=0.134.0+1.21.9
 minimum_jamlib_version=1.3.5+1.21.9
+minimum_luckperms_version=5.5.20
 
 branch=main
 group=io.github.jamalam360
