--- a/libs.versions.toml
+++ b/libs.versions.toml
@@ -19,6 +19,9 @@ jamlib = "1.3.5+1.21.10"
 # https://modrinth.com/mod/modmenu/versions
 modmenu = "16.0.0-rc.1"
 
+# https://luckperms.net/wiki/Developer-API#gradle
+luckperms-api = "5.5"
+
 [libraries]
 architectury-common = { module = "dev.architectury:architectury", version.ref = "architectury" }
 architectury-fabric = { module = "dev.architectury:architectury-fabric", version.ref = "architectury" }
@@ -32,5 +35,7 @@ fabric-api = { module = "net.fabricmc.fabric-api:fabric-api", version.ref = "fab
 jamlib-common = { module = "io.github.jamalam360:jamlib", version.ref = "jamlib" }
 jamlib-fabric = { module = "io.github.jamalam360:jamlib-fabric", version.ref = "jamlib" }
 jamlib-neoforge = { module = "io.github.jamalam360:jamlib-neoforge", version.ref = "jamlib" }
+
+luckperms-api = { module = "net.luckperms:api", version.ref = "luckperms.api"}
 
 modmenu = { module = "maven.modrinth:modmenu", version.ref = "modmenu" }
