feat: update to 1.21.11
closes #108

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
 org.gradle.parallel=true
-version=4.6.0+1.21.10
-minecraft_version=1.21.10
+version=4.6.0+1.21.11
+minecraft_version=1.21.11
 
-additional_minecraft_versions=1.21.9
-minimum_minecraft_version=1.21.9
-minimum_architectury_api_version=18.0.3
-minimum_fabric_api_version=0.134.0+1.21.9
-minimum_jamlib_version=1.3.5+1.21.9
+additional_minecraft_versions=
+minimum_minecraft_version=1.21.11
+minimum_architectury_api_version=19.0.1
+minimum_fabric_api_version=0.141.1+1.21.11
+minimum_jamlib_version=1.3.5+1.21.11
 
 branch=main
 group=io.github.jamalam360
